syntax = "proto3";
package main;

message HerdCommand {
    int64 status = 1;
    int64 data1 = 2;
    int64 data2 = 3;
    int64 deadline = 4;
}